--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -1,32 +1,36 @@
-#wrapper{
+#wrapper {
     width: 500px;
-    margin:10px auto 10px auto;
+    margin: 10px auto 10px auto;  
+    /* top, right, bottom, left */
     height: 1000px;
-    background:red;
-}
-header{
-    height: 50px;
-    width: 100%;
     background:#eeeeee;
+}
+
+header {
+    width: 100%;
+    height: 50px;
+    background:#dddddd;
     text-align: center;
 }
 
-nav, aside{
-    background: orange;
+.article-header {
+    background:#ffffff;
+}
+
+nav, aside {
+    background:#dddddd;
     width:100px;
     float: left;
 }
 
-article{
-    width: 300px; 
-    background:white;
+article {
+    /*border: 1px solid #000000;*/
+    background: #ffffff;
+    width:300px;
     float: left;
-    text-align:center;
 }
 
-#page-footer{
-clear:left;
-    background:blue;
-    text-align:center;
-  
+#page-footer {
+    clear:left;
+    background:#dddddd;
 }
